fixed vertical align

--- a/packages/components-css/form-field-radio-option/index.scss
+++ b/packages/components-css/form-field-radio-option/index.scss
@@ -11,3 +11,7 @@
 .utrecht-form-field--radio .utrecht-form-field__label {
   --utrecht-form-label-font-weight: var(--rhc-form-field-radio-option-font-weight, inherit);
 }
+
+.rhc-radio {
+  vertical-align: middle;
+}
